Save video recording on server side

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,6 +17,7 @@
         button {
             padding: 10px 20px;
             font-size: 16px;
+            margin: 5px;
         }
     </style>
 </head>
@@ -26,6 +27,7 @@
     <div>
         <button id="createCallBtn">Create Call</button>
         <button id="joinCallBtn">Join Call</button>
+        <button id="endCallBtn" style="display: none;">End Call</button>
     </div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="script.js"></script>
